--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-xml-parser": "^1.1.8",
@@ -26,6 +28,7 @@
     "stream-browserify": "^3.0.0",
     "timers": "^0.1.1",
     "timers-browserify": "^2.0.12",
+    "use-react-router-breadcrumbs": "^4.0.0",
     "web-vitals": "^2.1.3",
     "xml2js": "^0.4.23"
   },
